--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: Andrwe Shere TechStart Portfolio
+title: Andrew Shere TechStart Portfolio
 description: TechStart Projects
